--- a/apps/core/templates/core/nav.html
+++ b/apps/core/templates/core/nav.html
@@ -64,7 +64,7 @@
     </div>
     <!-- MENU -->
     <div class="menu">
-        <a href="/om-oss/">Om oss</a>
+        <a id="desNavAboutLink" href="/om-oss/">Om oss</a>
         <a onclick="categoriesDropDes()" id="categoryDropdownMobileLinkDes">Kategorier<i id="categoryDropdownMobileIconDes" class="fa-solid fa-caret-down"></i></a>
         <div class="category-dropdown-mob" id="categoryDropdownMobileDes">
             <div id="categoryDropdownMobileWidthDes">
@@ -73,9 +73,9 @@
                 {% endfor %}
             </div>
         </div>
-        <a href="/alle-tjenester/">Alle tjenester</a>
-        <a href="/blogg/">Blogg</a>
-        <a class="nav_order_btn" href="/for-bedrifter/">For bedrifter</a>
+        <a id="desNavAllprLink" href="/alle-tjenester/">Alle tjenester</a>
+        <a id="desNavBlogLink" href="/blogg/">Blogg</a>
+        <a id="desNavBusinessLink" class="nav_order_btn" href="/for-bedrifter/">For bedrifter</a>
     </div>    
 </div>
 </div>
