--- a/apps/core/templates/pages/about/about.html
+++ b/apps/core/templates/pages/about/about.html
@@ -62,7 +62,7 @@
             <p>
                 Vi forstår at det kan være en utfordring å finne de rette tjenestene for dine behov, derfor har vi gjort det enkelt for deg ved å samle alle tjenestene på ett sted. 
                 Tjenesten kommer alltid til å forbli gratis å bruke.
-                <div class="video" style="width: 100%; height: 180px; background: lightgrey; margin-top: 10px; border-radius: 4px;">video her</div>
+                <!-- <div class="video">video her</div> -->
             </p>
         </div>
 
