--- a/static/scss/store/blog/blog.css
+++ b/static/scss/store/blog/blog.css
@@ -16,6 +16,10 @@
   display: none;
 }
 
+#desNav #desNavBlogLink {
+  color: #06c484;
+}
+
 .page #blogQ {
   position: absolute;
   top: 66px;
@@ -91,7 +95,26 @@
   color: #183b56;
 }
 
-@media only screen and (min-device-width: 1145px) {
+@media only screen and (min-device-width: 1140px) {
+  .page #blogQ {
+    position: absolute;
+    top: 66px;
+    left: 0;
+    width: 100%;
+    height: auto;
+    background: #06c484;
+    color: rgb(246, 246, 246);
+    font-size: 15px;
+    padding: 10px 35px;
+    font-weight: 500;
+    z-index: 10000;
+    text-align: left;
+  }
+  .page #blogQ.sticky {
+    position: fixed;
+    top: 66px;
+    box-shadow: 0 0 4px rgba(5, 5, 5, 0.12);
+  }
   .blog-posts {
     background: white;
     width: 100%;
