--- a/static/scss/page/about.css
+++ b/static/scss/page/about.css
@@ -16,6 +16,10 @@
   display: none;
 }
 
+#desNav #desNavAboutLink {
+  color: #06c484;
+}
+
 .page #aboutQ {
   position: absolute;
   top: 66px;
@@ -57,4 +61,56 @@
   font-size: 15px;
   opacity: 0.9;
   padding: 4px 0;
+}
+.page .about-us .video {
+  width: auto;
+  max-width: 500px;
+  height: 300px;
+  background: rgb(199, 199, 199);
+}
+
+@media only screen and (min-device-width: 1140px) {
+  .page #aboutQ {
+    position: absolute;
+    top: 66px;
+    left: 0;
+    width: 100%;
+    height: auto;
+    background: #06c484;
+    color: rgb(246, 246, 246);
+    font-size: 15px;
+    padding: 10px 35px;
+    font-weight: 500;
+    z-index: 10000;
+    text-align: left;
+  }
+  .page #aboutQ.sticky {
+    position: fixed;
+    top: 66px;
+    box-shadow: 0 0 4px rgba(5, 5, 5, 0.12);
+  }
+  .page .about-us {
+    position: relative;
+    padding-top: 155px;
+    padding-bottom: 19px;
+    margin-bottom: 19px;
+    padding-inline: 35px;
+  }
+  .page .about-us h1 {
+    font-size: 23px;
+    color: #183b56;
+    font-weight: 500;
+  }
+  .page .about-us p {
+    max-width: 700px;
+    color: #183b56;
+    font-size: 16px;
+    opacity: 0.87;
+  }
+  .page .about-us a {
+    display: block;
+    font-size: 16px;
+    opacity: 0.9;
+    padding: 4px 0;
+  }
 }/*# sourceMappingURL=about.css.map */
