--- a/static/scss/page/about.scss
+++ b/static/scss/page/about.scss
@@ -19,6 +19,11 @@ $txt: #183b56;
         }
     }
   }
+#desNav{
+    #desNavAboutLink{
+        color: $primBtn;
+    }
+}
 
 .page{
     #aboutQ{
@@ -62,5 +67,60 @@ $txt: #183b56;
             opacity: 0.9;
             padding: 4px 0;
         }
+        .video{
+            width: auto;
+            max-width: 500px;
+            height: 300px;
+            background: rgb(199, 199, 199);
+        }
     }
 }
+
+
+@media only screen and (min-device-width: 1140px) {
+    .page{
+      #aboutQ{
+          position: absolute;
+          top: 66px;
+          left: 0;
+          width: 100%;
+          height: auto;
+          background: $primBtn;
+          color: $white;
+          font-size: 15px;
+          padding: 10px 35px;
+          font-weight: 500;
+          z-index: 10000;
+          text-align: left;
+          &.sticky{
+            position: fixed;
+            top: 66px;
+            box-shadow: 0 0 4px rgba(5,5,5,0.12);
+          }
+      }
+      .about-us{
+        position: relative;
+        padding-top: 155px;
+        padding-bottom: 19px;
+        margin-bottom: 19px;
+        padding-inline: 35px;
+        h1{
+            font-size: 23px;
+            color: $txt;
+            font-weight: 500;
+        }
+        p{
+            max-width: 700px;
+            color: $txt;
+            font-size: 16px;
+            opacity: 0.87;
+        }
+        a{
+            display: block;
+            font-size: 16px;
+            opacity: 0.9;
+            padding: 4px 0;
+        }
+    }
+    }
+  }
