--- a/static/scss/store/base.css
+++ b/static/scss/store/base.css
@@ -14,7 +14,6 @@
 
 .cover {
   width: 100%;
-  height: -webkit-max-content;
   height: -moz-max-content;
   height: max-content;
   position: relative;
@@ -34,7 +33,6 @@
   padding-inline: 25px;
   padding-top: 120px;
   padding-bottom: 55px;
-  height: -webkit-max-content;
   height: -moz-max-content;
   height: max-content;
   opacity: 0;
@@ -76,12 +74,16 @@
   padding-top: 18px;
   margin-top: -18px;
   border-radius: 4px;
+  cursor: pointer;
 }
 .cover .content .cover-search i::before {
   padding: 7px;
   margin: -7px;
   background: rgba(155, 155, 155, 0.22);
   border-radius: 100%;
+}
+.cover .content .cover-search i:hover {
+  background: rgba(155, 155, 155, 0.35);
 }
 .cover .content .cover-search input {
   width: 88%;
@@ -95,10 +97,6 @@
   font-size: 15px;
 }
 .cover .content .cover-search input::-moz-placeholder {
-  color: #183b56;
-  opacity: 0.8;
-}
-.cover .content .cover-search input:-ms-input-placeholder {
   color: #183b56;
   opacity: 0.8;
 }
@@ -148,7 +146,6 @@
 .services .content .services-cards .service {
   min-width: 190px;
   max-width: 190px;
-  height: -webkit-min-content;
   height: -moz-min-content;
   height: min-content;
   margin: 0 25px;
@@ -366,10 +363,6 @@
     color: #183b56;
     opacity: 0.8;
   }
-  .cover .content .cover-search input:-ms-input-placeholder {
-    color: #183b56;
-    opacity: 0.8;
-  }
   .cover .content .cover-search input::placeholder {
     color: #183b56;
     opacity: 0.8;
@@ -421,10 +414,9 @@
   .services .content .services-cards .service {
     min-width: 220px;
     max-width: 220px;
-    height: -webkit-min-content;
     height: -moz-min-content;
     height: min-content;
-    margin: 0 30px;
+    margin: 0 13px;
     position: relative;
     transition: 0.1s;
     cursor: pointer;
@@ -631,10 +623,6 @@
     color: #183b56;
     opacity: 0.8;
   }
-  .cover .content .cover-search input:-ms-input-placeholder {
-    color: #183b56;
-    opacity: 0.8;
-  }
   .cover .content .cover-search input::placeholder {
     color: #183b56;
     opacity: 0.8;
@@ -686,7 +674,6 @@
   .services .content .services-cards .service {
     min-width: 220px;
     max-width: 220px;
-    height: -webkit-min-content;
     height: -moz-min-content;
     height: min-content;
     margin: 0 30px;
