--- a/static/scss/store/footer.css
+++ b/static/scss/store/footer.css
@@ -168,7 +168,9 @@
     width: 100%;
     height: 50px;
     position: relative;
-    padding: 20px 35px;
+    padding: 20px 0;
+    max-width: 610px;
+    margin: auto;
   }
   #footer .footerbottom .social-icons {
     width: auto;
@@ -181,7 +183,7 @@
   #footer .footerbottom .social-icons .icons i {
     transition: 0.3s ease-in-out;
     border-radius: 4px;
-    font-size: 22px;
+    font-size: 20px;
     padding: 10px;
     color: #183B56;
     opacity: 0.8;
@@ -199,7 +201,7 @@
     padding: auto;
     margin: auto;
     color: #183B56;
-    font-size: 13px;
+    font-size: 12px;
     opacity: 0.8;
   }
 }/*# sourceMappingURL=footer.css.map */
