--- a/static/scss/store/footer.scss
+++ b/static/scss/store/footer.scss
@@ -182,7 +182,9 @@ $txt: #183b56;
             width: 100%;
             height: 50px;
             position: relative;
-            padding: 20px 35px;
+            padding: 20px 0;
+            max-width: 610px;
+            margin: auto;
             // social icons
             .social-icons{
                 width: auto;
@@ -193,7 +195,7 @@ $txt: #183b56;
                     i{
                         transition: .3s ease-in-out;
                         border-radius: 4px;
-                        font-size: 22px;
+                        font-size: 20px;
                         padding: 10px;
                         color: #183B56;
                         opacity: 0.8;
@@ -213,7 +215,7 @@ $txt: #183b56;
                     padding: auto;
                     margin: auto;
                     color: #183B56;
-                    font-size: 13px;
+                    font-size: 12px;
                     opacity: 0.8;
                 }
             }
