--- a/static/scss/store/nav.scss
+++ b/static/scss/store/nav.scss
@@ -366,13 +366,14 @@ $txt: #183b56;
             padding-right: 0;
             a{
                 color: $txt;
-                font-size: 16px;
+                font-size: 17px;
                 text-decoration: none;
                 padding: 0 8px;
                 margin-inline: 8px;
                 padding-bottom: 5px;
                 padding-top: 7px;
                 transition: .2s;
+                opacity: 0.9;
                 cursor: pointer;
                 &:hover{
                     text-decoration: underline;
