--- a/static/scss/store/product/category.css
+++ b/static/scss/store/product/category.css
@@ -65,10 +65,6 @@
   color: #183b56;
   opacity: 0.8;
 }
-.category-search input:-ms-input-placeholder {
-  color: #183b56;
-  opacity: 0.8;
-}
 .category-search input::placeholder {
   color: #183b56;
   opacity: 0.8;
@@ -103,7 +99,6 @@
   flex: 1 auto;
   flex: 44%;
   max-width: 167px;
-  height: -webkit-min-content;
   height: -moz-min-content;
   height: min-content;
   padding: 0;
@@ -160,70 +155,11 @@
 
 @media only screen and (min-device-width: 1140px) {
   .category-search {
-    position: absolute;
-    top: 55px;
-    width: 100%;
-    padding-inline: 33px;
-    padding-bottom: 15px;
-    padding-top: 15px;
-    text-align: center;
-    border-bottom: 1px solid rgba(40, 40, 40, 0.1);
-    z-index: 10000;
-    background: white;
-  }
-  .category-search.sticky {
-    position: fixed;
-    top: 0;
-    box-shadow: 0 0 4px rgba(5, 5, 5, 0.12);
-  }
-  .category-search form {
-    border: 1px solid rgb(234, 234, 234);
-    border-radius: 4px;
-    display: flex;
-    max-width: 500px;
-    position: relative;
-  }
-  .category-search button {
-    border: none;
-    background: transparent;
-    position: absolute;
-    right: 20px;
-    top: 13px;
-    padding: 3px 8px;
-    margin: -3px -8px;
-    border-radius: 100%;
-    background: rgba(155, 155, 155, 0.22);
-  }
-  .category-search button i {
-    font-size: 15px;
-    color: rgba(24, 59, 86, 0.662745098);
-  }
-  .category-search input {
-    width: 85%;
-    height: 50px;
-    border: none;
-    outline: none;
-    padding: 7px;
-    background: white;
-    color: #183b56;
-    border-radius: 4px;
-    font-size: 15px;
-  }
-  .category-search input::-moz-placeholder {
-    color: #183b56;
-    opacity: 0.8;
-  }
-  .category-search input:-ms-input-placeholder {
-    color: #183b56;
-    opacity: 0.8;
-  }
-  .category-search input::placeholder {
-    color: #183b56;
-    opacity: 0.8;
+    display: none;
   }
   .category-q {
     position: absolute;
-    top: 135px;
+    top: 66px;
     left: 0;
     width: 100%;
     height: auto;
@@ -237,23 +173,24 @@
   }
   .category-q.sticky {
     position: fixed;
-    top: 81px;
+    top: 66px;
     box-shadow: 0 0 4px rgba(5, 5, 5, 0.12);
   }
   .page .categories {
-    padding-top: 195px;
+    padding-top: 128px;
     display: flex;
     flex-wrap: wrap;
+    padding-inline: 1px;
   }
   .page .categories .service {
     flex: 1 auto;
     flex: 60%;
     max-width: 197px;
-    height: -webkit-min-content;
     height: -moz-min-content;
     height: min-content;
     padding: 10px;
-    margin: 20px 10px;
+    margin: 20px 18px;
+    cursor: pointer;
   }
   .page .categories .service .service-image {
     width: 100%;
