--- a/apps/core/templates/pages/about/about.html
+++ b/apps/core/templates/pages/about/about.html
@@ -15,7 +15,7 @@
         <div class="text">
             <h1>Kort om oss</h1>
             <p>
-                Velkommen til Lillehammer Tjenester! Vi er et team som hjelper deg å finne tjenester i Lillehammer. Vi har samlet en liste over de beste tjenestene i området, fra regnskap og økonomi til elektro og bygg.
+                Velkommen til Lillehammer Tjenester! Vi er et team som hjelper deg å finne tjenester i Lillehammer. Vi har samlet en liste over de beste tjenestene i Lillehammer/Fåberg/Øyer og Tretten, fra regnskap og økonomi til elektro og bygg.
                 <br>
                 <br>
                 Vi har et sterkt fokus på kvalitet av tjenestene vi har samlet inn.
@@ -83,10 +83,10 @@
 
         <div class="text">
             <h1>Kontaktinformasjon</h1>
-            <a href="">+47 nr</a>
-            <a href="">support@Lillehammertjenester.no</a>
-            <a href="">Instagram</a>
-            <a href="">Facebook</a>
+            <!-- <a href="">+47 nr</a> -->
+            <!-- <a href="">support@Lillehammertjenester.no</a> -->
+            <a href="https://www.facebook.com/profile.php?id=100090085785878">Instagram</a>
+            <a href="https://www.instagram.com/lillehammertjenester.no/">Facebook</a>
         </div>
 
     </div>
