--- a/apps/core/templates/pages/statistics/statistic.html
+++ b/apps/core/templates/pages/statistics/statistic.html
@@ -9,7 +9,7 @@
 
 <div class="page">
     <div class="about-us">
-        <h1>Antall besøkere</h1>
+        <h1>Antall klikk</h1>
         {{num_visits}}
     </div>
  </div>
