--- a/apps/store/templates/core/product.html
+++ b/apps/store/templates/core/product.html
@@ -72,7 +72,7 @@
               <p><i class="fa-solid fa-star"></i>0</p><span>({{product.reviews.all.count}})</span>
               {% endif %}
                 </div>
-                <div class="name">{{product.name}}</div>
+                <div class="name">{{product.name}}  {{num_visits}}</div>
                 <div class="business-name"><i class="fa-solid fa-circle-user"></i>{{product.business_name}}</div>
           </div>
 
