--- a/apps/core/templates/core/base.html
+++ b/apps/core/templates/core/base.html
@@ -35,6 +35,16 @@
     <link rel="manifest" href="static/images/favicon/site.webmanifest">    
     <link rel="shortcut icon" href="static/images/favicon/favicon.ico">
 
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-QY2WWKHPX0"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-QY2WWKHPX0');
+</script>
+
 
     
 </head>
