--- a/apps/core/templates/pages/about/about.html
+++ b/apps/core/templates/pages/about/about.html
@@ -85,8 +85,8 @@
             <h1>Kontaktinformasjon</h1>
             <!-- <a href="">+47 nr</a> -->
             <!-- <a href="">support@Lillehammertjenester.no</a> -->
-            <a href="https://www.facebook.com/profile.php?id=100090085785878">Instagram</a>
-            <a href="https://www.instagram.com/lillehammertjenester.no/">Facebook</a>
+            <a href="https://www.facebook.com/profile.php?id=100090085785878">Facebook</a>
+            <a href="https://www.instagram.com/lillehammertjenester.no/">Instagram</a>
         </div>
 
     </div>
