--- a/apps/core/templates/pages/about/about.html
+++ b/apps/core/templates/pages/about/about.html
@@ -52,7 +52,7 @@
         <div class="text">
             <h1>Teamet</h1>
             <p>
-                Teamet består av en Vgs student som tenkte seg godt gjennom hva som mangler i Lillehammer.
+                Teamet består av en Vgs student som har store planer med å bygge Lillehammer Tjenester.
             </p>
 
         <hr style="margin-block: 38px;">
