--- a/apps/core/templates/pages/business/business.html
+++ b/apps/core/templates/pages/business/business.html
@@ -19,8 +19,10 @@
                     Lillehammer Tjenester er et platform hvor bedrifter kan legge ut tjenestene de tilbyr. På den måten kan kundene finne den tjenesten som møter behovet dems. 
                     <br>
                     <br>
-                    Det er maks 3 tjenester per bedrift, og bedriften må fylle inn et skjema med all info som trengs. 
+                    Det er maks 3 tjenester per bedrift.
                     Å bruke tjensten som bedrift er helt gratis, men det finnes ekstra tilbud som bedriften kan velge selv om de vil benytte. Disse tilbudene kommer snart.
+                    Hvis tjenesten din er en del av listen vi har laget, så kan du bli partner med oss under. <br><br> 
+                    Hvis tjenesten din ikke er en del av listen vi har laget, så kan du da også bli partner med oss, så skal vi publisere tjenesten din.
                 </p>
             </div>
 
