--- a/static/scss/page/search.scss
+++ b/static/scss/page/search.scss
@@ -8,20 +8,81 @@ $txt: #183b56;
   border-top: 1px solid rgba(0,0,0,0.1);
 }
 #mobileNav{
-  position: absolute;
   background: white;
-  &::before{
-      display: none;
-  }
-  &.sticky{
-      &::before{
-          display: none;
-      }
-  }
 }
 
 
 .page{
+  .recomendend{
+  .services{
+    display: flex;
+    overflow-x: scroll;
+    padding-bottom: 20px;
+    margin-bottom: 17px;
+  }
+  .service{
+    flex: 1 auto;
+    flex: 60%;
+    min-width: 190px;
+    max-width: 190px;
+    height: min-content;
+    padding: 10px;            
+    margin: 0 10px;
+    &:first-child{
+      margin-left: 9px;
+    }
+    .service-image{
+        width: 100%;
+        height: 105px;
+        object-fit: cover;
+        filter: brightness(90%);
+        border-radius: 4px;
+    }
+    .reviews{
+        display: flex;
+        margin-block: 1px;
+        margin-top: 6px;
+        p{
+        margin-bottom: 0;
+        color: #FFBC55;
+        font-size: 11px;
+        margin-top: 1px;
+        i{
+            transform: translateY(-0.9px);
+            margin-right: 3px;
+            font-size: 9px;
+        }
+        }
+        span{
+        color: rgb(170, 170, 170);
+        font-size: 10px;
+        transform: translateX(4px) translateY(2px);
+        }
+    }
+    .name{
+        font-size: 14px;
+        color: $txt;
+        font-weight: 500;
+        margin-bottom: 1px;
+    }
+    .business-name{
+        font-size: 11px;
+        color: $txt;
+        opacity: 0.7;
+        font-weight: 500;
+    }
+    &:hover{
+        background: white;
+        .name{
+          text-decoration: underline;
+        }
+        .service-image{
+          transition: .2s;
+          filter: brightness(85%);
+        }
+      }
+}
+}
   .search-search{
     position: absolute;
     top: 55px;
@@ -81,7 +142,7 @@ $txt: #183b56;
   .no-query{
     #searchQNo{
       position: absolute;
-      top: 70px;
+      top: 68px;
       left: 0;
       width: 100%;
       height: auto;
@@ -94,7 +155,7 @@ $txt: #183b56;
       opacity: 1 !important;
       &.sticky{
         position: fixed;
-        top: 0px;
+        top: 68px;
         box-shadow: 0 0 4px rgba(5,5,5,0.12);
       }
      }
