--- a/static/scss/page/search.css
+++ b/static/scss/page/search.css
@@ -15,11 +15,11 @@
 .page .recomendend .service {
   flex: 1 auto;
   flex: 60%;
-  min-width: 190px;
-  max-width: 190px;
+  min-width: 205px;
+  max-width: 205px;
   height: -moz-min-content;
   height: min-content;
-  padding: 10px;
+  padding: 12px 10px;
   margin: 0 10px;
 }
 .page .recomendend .service:first-child {
@@ -55,13 +55,13 @@
   transform: translateX(4px) translateY(2px);
 }
 .page .recomendend .service .name {
-  font-size: 14px;
+  font-size: 15px;
   color: #183b56;
   font-weight: 500;
   margin-bottom: 1px;
 }
 .page .recomendend .service .business-name {
-  font-size: 11px;
+  font-size: 12px;
   color: #183b56;
   opacity: 0.7;
   font-weight: 500;
