--- a/static/scss/store/product/product.scss
+++ b/static/scss/store/product/product.scss
@@ -530,6 +530,7 @@ $txt: #183b56;
                 text-decoration: underline;
                 cursor: pointer;
                 color: #007bff;
+                margin-block: 4px;
             }
         }
     }
