--- a/apps/core/templates/core/home.html
+++ b/apps/core/templates/core/home.html
@@ -100,7 +100,6 @@
    </div>
 </div>
 
-{% for product in products %}
 <script type="text/javascript">
 
    function searchIconSubmit(){
@@ -116,32 +115,73 @@
       zoom: 11, // Specify the starting zoom
     });
   
-    /* 
-  Add an event listener that runs
-    when a user clicks on the map element.
-  */
-  map.on('click', (event) => {
-    // If the user clicked on one of your markers, get its information.
-    const features = map.queryRenderedFeatures(event.point, {
-      layers: ['lillehammer'] // replace with your layer name
-    });
-    if (!features.length) {
-      return;
-    }
-    const feature = features[0];
-  
-    // Code from the next step will go here.
-    /* 
-      Create a popup, specify its options 
-      and properties, and add it to the map.
-    */
-  const popup = new mapboxgl.Popup({ offset: [0, -15] })
-    .setLngLat(feature.geometry.coordinates)
-    .setHTML(
-      `<h3>${feature.properties.title}</h3><p>${feature.properties.description}</p>`
-    )
-    .addTo(map);
-  });
+    map.on('load', () => {
+map.addSource('places', {
+   // This GeoJSON contains features that include an "icon"
+   // property. The value of the "icon" property corresponds
+   // to an image in the Mapbox Streets style's sprite.
+   'type': 'geojson',
+   'data': {
+      'type': 'FeatureCollection',
+      'features': [
+      '{% for product in products %}',
+   {
+   'type': 'Feature',
+   'properties': {
+      'description':
+      '<p>{{product.name}}<br><a href="{% url  "product_detail" product.slug  %}">Se tjeneste</a></p>',
+   },
+   'geometry': {
+      'type': 'Point',
+      'coordinates': ['{{product.cords1}}', '{{product.cords2}}']
+   },
+   },
+   '{% endfor %}',
+   ]
+   }
+   });
+// Add a layer showing the places.
+map.addLayer({
+'id': 'places',
+'type': 'symbol',
+'source': 'places',
+'layout': {
+"icon-image": "marker-editor",
+'icon-allow-overlap': true,
+'icon-size': 1,
+}
+});
+ 
+// When a click event occurs on a feature in the places layer, open a popup at the
+// location of the feature, with description HTML from its properties.
+map.on('click', 'places', (e) => {
+// Copy coordinates array.
+const coordinates = e.features[0].geometry.coordinates.slice();
+const description = e.features[0].properties.description;
+ 
+// Ensure that if the map is zoomed out such that multiple
+// copies of the feature are visible, the popup appears
+// over the copy being pointed to.
+while (Math.abs(e.lngLat.lng - coordinates[0]) > 180) {
+coordinates[0] += e.lngLat.lng > coordinates[0] ? 360 : -360;
+}
+ 
+new mapboxgl.Popup()
+.setLngLat(coordinates)
+.setHTML(description)
+.addTo(map);
+});
+ 
+// Change the cursor to a pointer when the mouse is over the places layer.
+map.on('mouseenter', 'places', () => {
+map.getCanvas().style.cursor = 'pointer';
+});
+ 
+// Change it back to a pointer when it leaves.
+map.on('mouseleave', 'places', () => {
+map.getCanvas().style.cursor = '';
+});
+});
+
   </script>
-{% endfor %}
 {% endblock %}
