--- a/apps/core/templates/core/home.html
+++ b/apps/core/templates/core/home.html
@@ -124,7 +124,7 @@ map.addSource('places', {
    'data': {
       'type': 'FeatureCollection',
       'features': [
-      '{% for product in products %}',
+      '{% for product in map_products %}',
    {
    'type': 'Feature',
    'properties': {
