--- a/apps/core/templates/core/search-results.html
+++ b/apps/core/templates/core/search-results.html
@@ -88,7 +88,7 @@
              </div>
         </div>
         <div class="recomendend">
-            <h1 style="padding-left: 18px; padding-top: 35px; margin-top: 20px; margin-bottom: 6px;" class="section-heading">Vi tror du kommer å like</h1>
+            <h1 style="padding-left: 18px; padding-top: 35px; margin-top: 20px; margin-bottom: 6px;" class="section-heading">Vi tror du kommer til å like</h1>
             <div class="services">
                 {% for product in arandom %}
                 <div class="service" onclick="window.location.href='{% url  'product_detail' product.slug  %}'">
