--- a/apps/store/templates/core/product.html
+++ b/apps/store/templates/core/product.html
@@ -5,6 +5,10 @@
 
 
 {% block content %}
+<meta name="description" property="og:description" content="{{product.description}}">
+<meta name="author" content="{{product.business_name}}">
+<meta name="title" property="og:title" content="{{product.name}} | {{product.business_name}}">
+{% block title %}{{product.name}} | {{product.business_name}}{% endblock %}
 <link rel="stylesheet" href="{% static '/scss/page/pages.css' %}" type="text/css">
 <link rel="stylesheet" href="{% static '/scss/store/product/product.css' %}" type="text/css">
 <script rel="stylesheet" src="{% static '/js/product.js' %}" type="text/javascript"></script>
@@ -17,7 +21,7 @@
    <div class="product-search" id="productSearch">
     <form id="searchForm" action="{% url 'home_page_search' %}" method="GET">
        {% csrf_token %}
-       <input name="q" type="text" placeholder="Søk blant 500 tjenester"><button type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
+       <input name="q" type="text" placeholder="Søk blant tjenester"><button type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
    </form>
  </div>
  <div class="page">
